--- a/questionSurvey/templates/index.html
+++ b/questionSurvey/templates/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <script src="/static/jquery-3.3.1.js"></script>
+    <script src="/static/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <title>个人站点</title>
+    <style>
+        .head {
+            width: 100%;
+            height: 60px;
+            background-color: #369;
+        }
+    </style>
 </head>
 <body>
     <h1>hello world!</h1>
