--- a/questionSurvey/templates/index.html
+++ b/questionSurvey/templates/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <script src="/static/jquery-3.3.1.js"></script>
     <script src="/static/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-    <title>个人站点</title>
+    <title>question首页</title>
     <style>
-        .head {
+        .active {
             width: 100%;
             height: 60px;
             background-color: #369;
@@ -15,6 +15,6 @@
     </style>
 </head>
 <body>
-    <h1>hello world!</h1>
+    <h1 class="active">hello world!</h1>
 </body>
 </html>
