--- a/questionSurvey/templates/question.html
+++ b/questionSurvey/templates/question.html
@@ -52,15 +52,17 @@
         #ad1{
             display: inline-block;
             width:1rem;
+            height:0.5rem;
         }
         #ad2{
             display: inline-block;
             width:1rem;
+            height:0.5rem;
         }
         #ad3{
             display: inline-block;
             width:1rem;
-
+            height:0.5rem;
         }
 
     </style>
