--- a/questionSurvey/templates/devQues/index.html
+++ b/questionSurvey/templates/devQues/index.html
@@ -12,7 +12,7 @@
     <title>question首页</title>
     <style>
         html, body{
-            background: #1b6d85;
+            background: #b3e0f8;
         }
         .containerDiv {
             width: 80%;
@@ -24,16 +24,24 @@
             margin-left: 0.3rem;
             word-wrap: break-word;
             margin-right: 0.3rem;
-            font-size: 1rem;
+            font-size: 0.8rem;
+            color: #003891;
         }
 
-        .img {
+        .imglast, .img {
             text-align: center;
         }
 
         .img img {
             width: 100%;
             margin-top: 0.5rem;
+        }
+
+        .imglast img{
+            width: 50%;
+            margin-top: 0rem;
+            height: 50%;
+
         }
 
         .chooice {
@@ -44,7 +52,7 @@
             width: 100%;
             height: 2rem;
             position: relative;
-            margin-top: 0.5rem;
+            margin-top: 1rem;
         }
 
         li:first-child {
@@ -54,16 +62,16 @@
 
         button {
             margin-top: 1rem;
-            height: 1rem;
-            width: 1rem;
+            height: 2rem;
+            width: 2rem;
             border-radius: 50%;
             border: 0px;
-            {#background-color: #ff6700;#}
-            color: white;
-            font-size:0.5rem ;
+            background-color: #8bceec;
+            color: #0271b7;
+            font-size:1.2rem ;
             position: absolute;
             left: -3%;
-            top: -37%;
+            top: -64%;
         }
 
         li .answer {
@@ -73,8 +81,9 @@
             text-align: center;
             line-height: 1.5rem;
             background-color: #f9f2f4;
+            color: #0271b7;
             margin-left: 1%;
-
+            font-size: 0.8rem;
             {#position: absolute;#}
             {#left: 4%;#}
             {#top: 35%;#}
@@ -87,10 +96,10 @@
 <body>
 <div class="containerDiv">
     <div class="header" id="content">
-        {{ questions.0.name }}
+        <span>{{ questions.0.name }}</span>
     </div>
 
-    {% if questions.0.id <= 11 %}
+    {% if questions.0.id <= 13 %}
         <div class="img">
         {#        通过后端的图片name控制#}
             <img src="{{ questions.0.pngname }}" alt="" id="icon">
@@ -105,17 +114,17 @@
                     <li>
                         {% if forloop.counter == 1 and questions.0.id != 1 and questions.0.id != 12 and questions.0.id != 13%}
                             <div>
-                                 <button style="background: #00F7DE">A</button>
+                                 <button >A</button>
                             </div>
                         {% endif %}
                     {% if forloop.counter == 2 %}
                             <div>
-                                 <button style="background: #3c763d">B</button>
+                                 <button>B</button>
                             </div>
                         {% endif %}
                     {% if forloop.counter == 3 %}
                             <div>
-                                 <button style="background: #8a6d3b;">C</button>
+                                 <button>C</button>
                             </div>
                         {% endif %}
                         <div class="answer">{{ answer }}</div>
@@ -126,31 +135,14 @@
         {% endif %}
     </ul>
 </div>
-{#    <div class="chooice">#}
-{#        <ul>#}
-{#            <li>#}
-{#                <div>#}
-{#                    <button>A</button>#}
-{#                </div>#}
-{#                <div class="answer">是</div>#}
-{#            </li>#}
-{#            <div class="clear_fix"></div>#}
-{#            <li>#}
-{#                <div>#}
-{#                    <button>B</button>#}
-{#                </div>#}
-{#                <div class="answer">否</div>#}
-{#            </li>#}
-{#            <div class="clear_fix"></div>#}
-{#            <li>#}
-{#                <div>#}
-{#                    <button>C</button>#}
-{#                </div>#}
-{#                <div class="answer">不确定</div>#}
-{#            </li>#}
-{#            <div class="clear_fix"></div>#}
-{#        </ul>#}
-{#    </div>#}
+
+{% if questions.0.id >= 12 %}
+    <div class="imglast">
+    {#        通过后端的图片name控制#}
+        <img src="/static/img/爱他美4期微商城-12.png" alt="" id="icon">
+    </div>
+
+{% endif %}
 
 </div>
 </body>
